Gap for SDG tiles fixed

--- a/themes/coderdojoschoeneweide/assets/scss/components/_sdg-icons.scss
+++ b/themes/coderdojoschoeneweide/assets/scss/components/_sdg-icons.scss
@@ -12,7 +12,7 @@
     flex-wrap: wrap;
 
     img {
-      max-width: calc(50% - var(--gap));
+      max-width: calc(50% - var(--gap) / 2);
     }
   }
 }
